--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "next": "^14.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "framer-motion": "^10.0.0",
+    "lucide-react": "^0.294.0",
+    "lodash": "^4.17.21",
+    "@types/lodash": "^4.14.202"
   },
   "scripts": {
     "dev": "next dev",
