--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "dependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "framer-motion": "^10.0.0",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.294.0",
     "next": "^14.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "typescript": "^5.0.0",
-    "framer-motion": "^10.0.0",
-    "lucide-react": "^0.294.0",
-    "lodash": "^4.17.21",
-    "@types/lodash": "^4.14.202"
+    "typescript": "^5.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15"
   },
   "scripts": {
     "dev": "next dev",
