--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.15.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15"
   },
