--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^10.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.294.0",
