--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "^14.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "tailwind-merge": "^2.5.4",
     "typescript": "^5.0.0"
   },
   "devDependencies": {
